src/stylesheets/Home.css
.Home {
    margin-top: 30px;
    display: flex;
    flex-wrap: wrap;
    width: 80%;
}

.hero-text {
    flex: 1;
    min-width: 300px;
    margin: 40px 0;
}

.typing-title {
    margin-bottom: 10px;
}

.hero-image {
    flex: 1;
    margin: 0 10vw;
    min-width: 200px;
    max-width: 350px;
}

.hero-image img {
    max-width:100%;
    max-height:100%;
}

.description {
    margin-top: 40px;
    max-width: 500px;
}

.register-button {
    width: 200px;
    margin: 50px auto;
}

